<resources>
    <string name="app_name">AppGym</string>
    <!-- Strings used for PrincipalScreen -->
    <string name="titlePrincipalWindow" translatable="false">My GymApp</string>
    <string name="sloganPrincipalWindow" translatable="false">We will help you achieve your goals.</string>
    <string name="textPrincipalWindow" translatable="false">¡Welcome to your zone of strength and wellness! Log in to transform your day!</string>
    <string name="btnLogin" translatable="false">Log in</string>
    <string name="btnCreateAccount" translatable="false">Create Account</string>
    <string-array name="lenguajes">
        <item>en</item>
        <item>es</item>
    </string-array>
    <string name="switchWhite" translatable="false">White</string>
    <string name="switchDark" translatable="false">Dark</string>

    <!-- Strings used for RegisterScreen -->
    <string name="tvName" translatable="false">Name</string>
    <string name="tvLastName" translatable="false">Last Name</string>
    <string name="tvEmail" translatable="false">Email</string>
    <string name="tvUser" translatable="false">Username</string>
    <string name="tvContra" translatable="false">Password</string>
    <string name="tvDate" translatable="false">Date of Birth</string>
    <string name="etDate" translatable="false">Select your date of birth</string>
    <string name="btnMale" translatable="false">Male</string>
    <string name="btnFemale" translatable="false">Female</string>
    <string name="btnGroup" translatable="false">Sex</string>
    <string name="btnVolver" translatable="false">Back</string>
    <string name="btnRegistrar" translatable="false">Register</string>

    <!-- Strings used for DataUserScreen -->
    <string name="tvSizeDU" translatable="false">Size</string>
    <string name="tvWeight" translatable="false">Weight</string>
    <string name="tvActividadFisica" translatable="false">How often do you exercise currently?</string>
    <string-array name="niveles_actividad">
        <item>Daily</item>
        <item>Several times a week</item>
        <item>Weekly</item>
        <item>Occasionally</item>
        <item>Never</item>
    </string-array>
    <string name="tvDiasEntrenar" translatable="false">How many days a week would you like to train?</string>
    <string-array name="dias_entrenar">
        <item>1-2 days</item>
        <item>3-4 days</item>
        <item>5-6 days</item>
        <item>7 days</item>
    </string-array>
    <string name="tvProblemaSalud" translatable="false">Do you have any health conditions we should know about?</string>
    <string name="tvPreferenciaHorario" translatable="false">What times do you prefer to train?</string>
    <string-array name="preferencia_Horario">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
    </string-array>
    <string name="tvMotivacion" translatable="false">What motivates you to keep training?</string>
    <string-array name="motivaciones">
        <item>Improve my health</item>
        <item>Achieve a physical goal</item>
        <item>Aesthetics / Physical changes</item>
        <item>Socialize / Create a routine</item>
    </string-array>
    <string name="btnGuardar" translatable="false">Save</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="errorDatosIngresados">Error entering the</string>
    <string name="errorUsuarioExiste">Error, this user is already registered</string>
    <string name="errorSexoNoSelect">Error selecting gender, you must select an option</string>


    <!-- Strings used for Screen for UsersScreen -->
    <string name="dayMonday">Monday</string>
    <string name="dayTuesday">Tuesday</string>
    <string name="dayWednesday">Wednesday</string>
    <string name="dayThursday">Thursday</string>
    <string name="dayFriday">Friday</string>
    <string name="daySaturday">Saturday</string>
    <string name="daySunday">Sunday</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>