<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterScreen">

  <Button
      android:id="@+id/btnRegisterSS"
      android:layout_width="140dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="600dp"
      android:layout_marginEnd="60dp"
      android:text="@string/btnRegistrar"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/etNameSS"
      android:layout_width="213dp"
      android:layout_height="41dp"
      android:layout_marginTop="132dp"
      android:layout_marginEnd="144dp"
      android:ems="10"
      android:inputType="text"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/tvNameSS"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="92dp"
      android:layout_marginEnd="315dp"
      android:text="@string/tvName"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/tvLastNameSS"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="188dp"
      android:layout_marginEnd="280dp"
      android:text="@string/tvLastName"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/tvEmailSS"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="272dp"
      android:layout_marginEnd="316dp"
      android:text="@string/tvEmail"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/tvDdateofBirthSS"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="352dp"
      android:layout_marginEnd="264dp"
      android:text="@string/tvDate"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/tvSex"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="440dp"
      android:layout_marginEnd="328dp"
      android:text="@string/btnGroup"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <RadioGroup
      android:id="@+id/rgSexSS"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="470dp"
      android:layout_marginEnd="115dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <RadioButton
        android:id="@+id/rbtnMale"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/btnMale" />

    <RadioButton
        android:id="@+id/rbtnFemale"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/btnFemale" />
  </RadioGroup>

  <EditText
      android:id="@+id/etLastNameSS"
      android:layout_width="213dp"
      android:layout_height="41dp"
      android:layout_marginTop="212dp"
      android:layout_marginEnd="144dp"
      android:ems="10"
      android:inputType="text"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/etEmailSS"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="296dp"
      android:layout_marginEnd="168dp"
      android:ems="10"
      android:inputType="textEmailAddress"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/etDateSS"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="372dp"
      android:layout_marginEnd="168dp"
      android:ems="10"
      android:inputType="date"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/btnBackSS"
      android:layout_width="140dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="60dp"
      android:layout_marginTop="600dp"
      android:text="@string/btnVolver"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:textSize="20sp" />
</androidx.constraintlayout.widget.ConstraintLayout>