<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.UsersScreen">

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtubeView"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginTop="388dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvEjercicio1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:padding="8dp"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/swtEjercicio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/descEjercicio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="#555555"
                android:textSize="14sp"
                android:visibility="gone" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvEjercicio2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:padding="8dp"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/swtEjercicio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/descEjercicio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="#555555"
                android:textSize="14sp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvEjercicio3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:padding="8dp"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/swtEjercicio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/descEjercicio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="#555555"
                android:textSize="14sp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvEjercicio4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:padding="8dp"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/swtEjercicio4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/descEjercicio4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="#555555"
                android:textSize="14sp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnVolverUserS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="612dp"
        android:text="@string/btnVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLunes"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="120dp"
                android:minHeight="48dp"
                android:padding="4dp"
                android:text="@string/dayMonday"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnMartes"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="120dp"
                android:minHeight="48dp"
                android:padding="4dp"
                android:text="@string/dayTuesday"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnMiercoles"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="120dp"
                android:minHeight="48dp"
                android:padding="4dp"
                android:text="@string/dayWednesday"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnJueves"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="120dp"
                android:minHeight="48dp"
                android:padding="4dp"
                android:text="@string/dayThursday"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnViernes"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="120dp"
                android:minHeight="48dp"
                android:padding="4dp"
                android:text="@string/dayFriday"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnSabado"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="120dp"
                android:minHeight="48dp"
                android:padding="4dp"
                android:text="@string/daySaturday"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnDomingo"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="120dp"
                android:minHeight="48dp"
                android:padding="4dp"
                android:text="@string/daySunday"
                android:textSize="16sp" />
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>